Read payment and gym entry history